Bug 92273 - No pointer events on windows on only hot-plugged monitor
Summary: No pointer events on windows on only hot-plugged monitor
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: XWayland (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Wayland bug list
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-04 07:24 UTC by Jonas Ådahl
Modified: 2015-10-08 00:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Jonas Ådahl 2015-10-04 07:24:46 UTC
If a Wayland compositor starts with only the primary monitor plugged in, and then plugs in a second monitor, an XWayland X11 client window will not receive any pointer device input events if it is displayed only on the hot plugged monitor.

The issue reproduces both when running weston (1.9.0) and mutter (3.18.0), with Xwayland (either master or 1.17.2).

It does not reproduce if the monitor was plugged in when starting the Wayland compositor.

Steps to reproduce:

1. Start XWayland capable Wayland compositor (e.g. weston or mutter) with only one monitor plugged in.
2. Start some terminal (such as gnome-terminal or weston-terminal)
3. Start "xev"
4. Make sure xev sees mouse movements by moving the pointer above the xev window and observe the events printed in the terminal
5. Plug in the second monitor
6. Move the xev window so it is half on each monitor
7. Observe that xev receives pointer events when pointer is on both monitors
8. Move the xev window so that is *only* on the second monitor
9. Observe that xev no longer receives any pointer events
Comment 1 Jonas Ådahl 2015-10-08 00:56:39 UTC
Patch merged, so closing this one now.

commit 216bdbc7351e2078d94857a3323f6cd8f0d2f191
Author: Jonas Ådahl <jadahl@gmail.com>
Date:   Wed Oct 7 12:02:38 2015 +0800

    xwayland: Update actual screen and root window size on output hot plug


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.